--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
             <div class="feature">
                 <div class="feature-icon">🌐</div>
                 <h3>Web Framework</h3>
-                <p>Includes Cannoli, a built-in web framework with routing, file uploads, chunked responses, and SSL/TLS support.</p>
+                <p>Includes <a href="https://github.com/strada-lang/cannoli" style="color: var(--primary);">Cannoli</a>, a built-in web framework with routing, file uploads, chunked responses, and SSL/TLS support.</p>
             </div>
             <div class="feature">
                 <div class="feature-icon">🔗</div>
@@ -746,7 +746,8 @@
             <a href="docs/index.html">Documentation</a> &nbsp;|&nbsp;
             <a href="docs/quickstart.html">QuickStart</a> &nbsp;|&nbsp;
             <a href="docs/reference.html">Reference</a> &nbsp;|&nbsp;
-            <a href="docs/cannoli.html">Cannoli</a>
+            <a href="docs/cannoli.html">Cannoli</a> &nbsp;|&nbsp;
+            <a href="https://github.com/strada-lang/cannoli">Cannoli GitHub</a>
         </p>
         <p style="margin-top: 2rem; font-size: 0.9rem;">A strongly-typed language inspired by Perl, compiling to C.</p>
     </footer>
