--- a/index.html
+++ b/index.html
@@ -506,6 +506,16 @@
                 <h3>Variadic Functions</h3>
                 <p>Accept variable arguments with ...@param syntax. Spread operator unpacks arrays at call sites.</p>
             </div>
+            <div class="feature">
+                <div class="feature-icon">⏳</div>
+                <h3>Async/Await</h3>
+                <p>First-class async/await with thread pool. async::all(), async::race(), timeouts, and cancellation.</p>
+            </div>
+            <div class="feature">
+                <div class="feature-icon">💻</div>
+                <h3>Interactive REPL</h3>
+                <p>Experiment interactively or run quick scripts without compilation. Memory and function profiling built-in.</p>
+            </div>
         </div>
     </section>
 
@@ -783,6 +793,7 @@
             <a href="https://github.com/strada-lang/strada-lang">GitHub</a> &nbsp;|&nbsp;
             <a href="docs/index.html">Documentation</a> &nbsp;|&nbsp;
             <a href="docs/quickstart.html">QuickStart</a> &nbsp;|&nbsp;
+            <a href="docs/repl.html">REPL</a> &nbsp;|&nbsp;
             <a href="docs/reference.html">Reference</a> &nbsp;|&nbsp;
             <a href="docs/cannoli.html">Cannoli</a> &nbsp;|&nbsp;
             <a href="https://github.com/strada-lang/cannoli">Cannoli GitHub</a>
