--- a/index.html
+++ b/index.html
@@ -516,6 +516,11 @@
                 <h3>Interactive REPL</h3>
                 <p>Experiment interactively or run quick scripts without compilation. Memory and function profiling built-in.</p>
             </div>
+            <div class="feature">
+                <div class="feature-icon">📖</div>
+                <h3>POD Documentation</h3>
+                <p>Document your code with POD (Plain Old Documentation). Generate HTML docs with the stradadoc tool.</p>
+            </div>
         </div>
     </section>
 
