--- a/index.html
+++ b/index.html
@@ -763,9 +763,9 @@
             <div class="step">
                 <div class="step-number">2</div>
                 <div class="step-content">
-                    <h3>Build the compiler</h3>
-                    <p>Compile the self-hosting Strada compiler.</p>
-                    <code>make</code>
+                    <h3>Configure and build</h3>
+                    <p>Detect dependencies and build the compiler.</p>
+                    <code>./configure && make</code>
                 </div>
             </div>
 
