--- a/index.html
+++ b/index.html
@@ -521,6 +521,11 @@
                 <h3>POD Documentation</h3>
                 <p>Document your code with POD (Plain Old Documentation). Generate HTML docs with the stradadoc tool.</p>
             </div>
+            <div class="feature">
+                <div class="feature-icon">🔧</div>
+                <h3>Map, Grep, Sort</h3>
+                <p>Perl-style array transformations with $_ and blocks. Create lookup hashes with <code>map { $_ =&gt; 1 }</code>.</p>
+            </div>
         </div>
     </section>
 
